--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,9 +1,13 @@
 <div class="row">
   <div class="principal">
+    <div class="foto">
     <img src="../../../assets/perfil.jpeg">
+    </div>
     <div class="texto">
-      <p id="nombre">{{persona.nombre}}</p>
-      <p id="nombre">{{persona.apellido}}</p>
+      <div class="nombre">
+        <p>{{persona.nombre}}</p>
+        <p>{{persona.apellido}}</p>
+      </div>
       <p>Full Stack Developer Jr</p>
     </div>
   </div>
