--- a/src/app/components/acerca-de/acerca-de.component.scss
+++ b/src/app/components/acerca-de/acerca-de.component.scss
@@ -6,22 +6,34 @@
   justify-content: space-around;
 
   .principal {
-    background-color: blue;
-    width: 40%;
+    // width: 40%;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
+    .foto{
+      display: flex;
+    justify-content: center;
+    img {
+      border-radius: 15%;
+      max-height: 200px;
+      width:auto;
+    }
+    }
     .texto{
         display: flex;
         flex-direction: column;
     justify-content: center;
+      .nombre{
+        display: flex;
+        flex-direction: row;
+      justify-content: center;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2em;
 
+      }
     }
-    img {
-      border-radius: 25%;
-      height: 200px;
-    }
+    
 
   }
 
