--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -6,10 +6,11 @@
    --color1: rgba(65, 67, 69, 0.98);
    --color2: rgba(65, 67, 69, 0.98);
     background: var(--color1); background: -webkit-linear-gradient(to right, var(--color1), var(--color2)); 
-     background: linear-gradient(to right, var(--color1), var(--color2)), url("../../../assets/placa-vectorizada.svg"); 
+    background: linear-gradient(to right, var(--color1), var(--color2)), url("../../../assets/placa-vectorizada.svg"); 
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat ;
+    // background-attachment: fixed;
     background-position: 0 0;
     overflow:hidden;
 
