--- a/src/app/components/acerca-de/acerca-de.component.scss
+++ b/src/app/components/acerca-de/acerca-de.component.scss
@@ -1,44 +1,262 @@
-.row {
-  padding: 1em;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-
-  .principal {
-    // width: 40%;
-
+.acerca-de-mi {
+  color: #f3f3f3;
+  --color1: rgba(65, 67, 69, 1);
+  background-color: var(--color1);
+  max-width: 100vw;
+  .titulo {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    .foto{
-      display: flex;
+    flex-direction: row;
     justify-content: center;
-    img {
-      border-radius: 15%;
-      max-height: 200px;
-      width:auto;
-    }
-    }
-    .texto{
-        display: flex;
-        flex-direction: column;
-    justify-content: center;
-      .nombre{
-        display: flex;
-        flex-direction: row;
-      justify-content: center;
-      font-family: 'Orbitron', sans-serif;
-      font-size: 2em;
+    align-items: center;
+    margin: 0em 0em 1em 0em;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.5em;
+    button {
+      margin: 0em 0em 0em 1em;
+      background-color: transparent;
+      border: none;
 
+      img {
+        height: 50px;
       }
     }
-    
 
   }
 
-  .secundario {
-    background-color: red;
-    width: 40%;
+ 
+
+  .principal {
+    padding: 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    max-width: 100vw;
+
+    .foto {
+      img {
+        border-radius: 15%;
+        max-height: 200px;
+        width: auto;
+      }
+    }
+
+    .texto {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 1em;
+      width: 600px;
+
+      .nombre {
+        font-family: 'Orbitron', sans-serif;
+        font-size: 2em;
+        color: #f3f3f3;
+      }
+
+      p {
+        font-family: 'Roboto', sans-serif;
+        // color: #f3f3f3;
+      }
+    }
+  }
+}
+@media screen and (max-width: 800px){
+  .acerca-de-mi { 
+    .titulo {
+      font-size: 1.5em;
+      button {
+        margin: 0em 0em 0em 1em;
+        img {
+          height: 50px;
+        }
+      }
+  
+    }
+    .principal {
+      padding: 1em;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      max-width: 100vw;
+  
+      .foto {
+        display: flex;
+      justify-content: center;
+
+        img {
+          border-radius: 15%;
+          max-height: 200px;
+          width: auto;
+        }
+      }
+  
+      .texto {
+        display: flex;
+      justify-content: center;
+        width: 100%;
+        margin: 1em 0em;
+        .nombre {
+
+          display: flex;
+          justify-content: center;
+        }
+  
+        p {
+
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 580px){
+  .acerca-de-mi { 
+  max-width: 100vw;
+
+    .titulo {
+      font-size: 1.2em;
+      button {
+        margin: 0em 0em 0em 1em;
+        img {
+          height: 50px;
+        }
+      }
+  
+    }
+    .principal {
+      padding: 0em;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      max-width: 100vw;
+  
+      .foto {
+        display: flex;
+      justify-content: center;
+
+        img {
+          border-radius: 15%;
+          max-height: 200px;
+          width: auto;
+        }
+      }
+  
+      .texto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 1em 0em;
+        // padding: 0em 1em;
+        max-width: 100vw;
+
+  
+        .nombre {
+          font-family: 'Orbitron', sans-serif;
+          font-size: 1.5em;
+          color: #f3f3f3;
+        max-width: 100vw;
+
+        }
+        .texto-extra{
+        margin: 0em 1em;
+
+        }
+        p {
+          margin: 0;
+          padding: 0;
+          font-size: 0.8em;
+          max-width: 99vw;
+
+          font-family: 'Roboto', sans-serif;
+          // color: #f3f3f3;
+        }
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 440px){
+  .acerca-de-mi { 
+  max-width: 100vw;
+
+    .titulo {
+      font-size: 1.2em;
+      button {
+        margin: 0em 0em 0em 1em;
+        img {
+          height: 50px;
+        }
+      }
+  
+    }
+    .principal {  
+      .foto {
+        img {
+          border-radius: 15%;
+          max-height: 200px;
+          width: auto;
+        }
+      }
+  
+      .texto {
+        margin: 1em 0em;  
+        .nombre {
+          font-size: 1em;
+        }
+        .texto-extra{
+        margin: 0em 1em;
+
+        }
+        p {
+          font-size: 0.8em;
+          max-width: 99vw;
+
+          font-family: 'Roboto', sans-serif;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 300px){
+  .acerca-de-mi { 
+  max-width: 100vw;
+
+    .titulo {
+      font-size: 1.2em;
+      button {
+        margin: 0em 0em 0em 1em;
+        img {
+          height: 50px;
+        }
+      }
+  
+    }
+    .principal {  
+      .foto {
+        img {
+          border-radius: 15%;
+          max-height: 150px;
+          width: auto;
+        }
+      }
+  
+      .texto {
+        margin: 1em 0em;  
+        .nombre {
+          font-size: 0.9em;
+        }
+        .texto-extra{
+        margin: 0em 1em;
+
+        }
+        p {
+          font-size: 0.7em;
+          max-width: 99vw;
+
+          font-family: 'Roboto', sans-serif;
+        }
+      }
+    }
   }
 }
