--- a/src/app/components/acerca-de/editar-acerca-de/editar-acerca-de.component.scss
+++ b/src/app/components/acerca-de/editar-acerca-de/editar-acerca-de.component.scss
@@ -5,9 +5,7 @@
     
         color: #f3f3f3;
         background-color: var(--color1);
-        min-height: 100vh;
-        height: 100%;
-
+        height: 100vh;
     .titulo{
         height: 60px;
         display: flex;
@@ -42,7 +40,7 @@
         justify-content: center;
         align-items: center;
         margin: 0em 0em;
-        max-width: 100vw;
+        // max-width: 600px;
         img{
             height: 150px;
             width: 250px;
@@ -97,7 +95,6 @@ form{
         justify-content:space-around;
        .subcontenido{
         margin: 1em;
-        width: 400px;
        }
 
     }
@@ -120,10 +117,11 @@ label{
 input{
     display: block;
     height: 20px;
-    width: 100%;
+    max-width: 300px;
     background-color: rgba(255,255,255,1);
     border-radius: 3px;
     padding: 0 10px;
+    margin-top: 8px;
     font-size: 14px;
     font-weight: 300;
 }
@@ -141,116 +139,37 @@ input{
     border-radius: 5px;
     cursor: pointer;
 }
+.principal {
+    padding: 1em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    max-width: 100vw;
 
-
-@media screen and (max-width: 1000px){
-    form{
-        padding:0;
+    .foto {
+      img {
+        border-radius: 15%;
+        max-height: 200px;
+        width: auto;
+      }
     }
-    input{
-        width: 300px;
+
+    .texto {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 1em;
+      width: 600px;
+
+      .nombre {
+        font-family: 'Orbitron', sans-serif;
+        font-size: 2em;
+        color: #f3f3f3;
+      }
+
+      p {
+        font-family: 'Roboto', sans-serif;
+        // color: #f3f3f3;
+      }
     }
-    .subcontenido{
-        width: 300px;
-       }
-
-}
-@media screen and (max-width: 700px){
-    input{
-        width: 250px;
-    }
-    .subcontenido{
-        width: 250px;
-        margin: 0;
-        padding: 0;
-       }
-
-}
-@media screen and (max-width: 600px){
-    input{
-        width: 200px;
-    }
-    .subcontenido{
-        width: 200px;
-        margin: 0;
-        padding: 0;
-       }
-
-}
-@media screen and (max-width: 480px){
-
-    form{
-
-        .nuevo-contenido{
-            display: flex;
-            flex-direction: column;
-
-            justify-content:center;
-            align-items:center;
-         
-            .subcontenido{
-                display: flex;
-            flex-direction: column;
-
-            justify-content:center;
-            align-items:center;
-            margin: 0;
-            width: 100%;
-               }
-        }
-    }
-    .contenido{
-        padding-top: 2em;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 0em 0em;
-   
-}}
-
-
-@media screen and (max-width: 270px){
-
-    input{
-        max-width: 200px;
-        padding: 0;
-    }
-    .subcontenido{
-        max-width: 200px;
-       }
-    .contenido{
-        .contenido-imagen{
-            height: 125px;
-                width: 200px;
-            img{
-                height: 125px;
-                width: 200px;
-
-            }
-        }
-        .contenidoTexto{
-            margin: 0em 0em 0 1em;
-            .titulo{
-                font-size: 15px;
-                height: 20px;
-            }
-            .texto{
-                font-size: 15px;
-                height: 20px;
-
-
-            }
-            .fechas{
-                font-size: 15px;
-                height: 20px;
-            }
-            .lugar{
-                font-size: 10px;
-                height: 20px;
-                
-            }
-        }
-    
-}}
-
+  }
