--- a/src/app/components/educacion/nueva-educacion/nueva-educacion.component.html
+++ b/src/app/components/educacion/nueva-educacion/nueva-educacion.component.html
@@ -1,44 +1,43 @@
-
 <div class="total">
     <div class="titulo">
-        <h2>Editar Experiencia</h2>
+        <h2>Nueva Experiencia</h2>
     </div>
   <div class="nuevo">
-    <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+    <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
       <div class="nuevo-contenido">
         <div class="subcontenido">
             <div>
               <label for="nombre">Nombre de la empresa:</label>
-              <input type="text" id="nombre" name="nombre" [(ngModel)]="expLab.nombre" required>
+              <input type="text" id="nombre" name="nombre" [(ngModel)]="nombre" required>
             </div>
             <div>
               <label for="nombre">Subtitulo:</label>
-              <input type="text" id="texto" name="texto" [(ngModel)]="expLab.texto" required>
+              <input type="text" id="texto" name="texto" [(ngModel)]="texto" required>
             </div>
             <div>
                 <label for="nombre">Lugar:</label>
-                <input type="text" id="lugar" name="lugar" [(ngModel)]="expLab.lugar" required>
+                <input type="text" id="lugar" name="lugar" [(ngModel)]="lugar" required>
               </div>
           </div>
           <div class="subcontenido">
             <div>
                 <label for="nombre">Desde:</label>
-                <input type="text" id="desde" name="desde" [(ngModel)]="expLab.desde" required>
+                <input type="text" id="desde" name="desde" [(ngModel)]="desde" required>
               </div>
             <div>
               <label for="nombre">Hasta:</label>
-              <input type="text" id="hasta" name="hasta" [(ngModel)]="expLab.hasta" required>
+              <input type="text" id="hasta" name="hasta" [(ngModel)]="hasta" required>
             </div>
             
             <div>
               <label for="nombre">Img:</label>
-              <input type="text" id="img" name="img" [(ngModel)]="expLab.img" required>
+              <input type="text" id="img" name="img" [(ngModel)]="img" required>
             </div>
           </div>
       </div>
       <div class="boton">
         <button>
-            Editar
+            Agregar experiencia
           </button>
       </div>
       
@@ -46,25 +45,22 @@
 
   </div>
   <div class="contenido">
-    <div class="contenido-imagen">
-      <img src="{{expLab.img}}" alt="">
-
-    </div>
+    <img src="{{img}}" alt="">
 
     <div class="contenidoTexto">
       <h3 class="titulo">
-        {{expLab.nombre}}
+        {{nombre}}
       </h3>
       <h4 class="texto">
-        {{expLab.texto}}
+        {{texto}}
       </h4>
       <div class="fechas">
-        {{expLab.desde}}
+        {{desde}}
         <p>-</p>
-        {{expLab.hasta}}
+        {{hasta}}
       </div>
       <h5 class="lugar">
-        {{expLab.lugar}}
+        {{lugar}}
       </h5>
 
     </div>
