--- a/src/app/components/experiencia/nueva-experiencia/nueva-experiencia.component.html
+++ b/src/app/components/experiencia/nueva-experiencia/nueva-experiencia.component.html
@@ -1,19 +1,70 @@
-<div class="container">
-    <div class="row">
-        <div>
-            <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
-                <div class="form-group">
-                    <label for="nombreE">Nombre de la empresa</label>
-                    <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
-                </div>
-                <div class="form-group">
-                    <label for="descripcionE">Descripcion de la tarea</label>
-                    <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
-                </div>
-                <button class="btn btn-primary">
-                    Agregar experiencia
-                </button>
-            </form>
-        </div>
+<div class="total">
+    <div class="titulo">
+        <h2>Nueva Experiencia</h2>
     </div>
-</div>
+  <div class="nuevo">
+    <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
+      <div class="nuevo-contenido">
+        <div class="subcontenido">
+            <div>
+              <label for="nombre">Nombre de la empresa:</label>
+              <input type="text" id="nombre" name="nombre" [(ngModel)]="nombre" required>
+            </div>
+            <div>
+              <label for="nombre">Subtitulo:</label>
+              <input type="text" id="texto" name="texto" [(ngModel)]="texto" required>
+            </div>
+            <div>
+                <label for="nombre">Lugar:</label>
+                <input type="text" id="lugar" name="lugar" [(ngModel)]="lugar" required>
+              </div>
+          </div>
+          <div class="subcontenido">
+            <div>
+                <label for="nombre">Desde:</label>
+                <input type="text" id="desde" name="desde" [(ngModel)]="desde" required>
+              </div>
+            <div>
+              <label for="nombre">Hasta:</label>
+              <input type="text" id="hasta" name="hasta" [(ngModel)]="hasta" required>
+            </div>
+            
+            <div>
+              <label for="nombre">Img:</label>
+              <input type="text" id="img" name="img" [(ngModel)]="img" required>
+            </div>
+          </div>
+      </div>
+      <div class="boton">
+        <button>
+            Agregar experiencia
+          </button>
+      </div>
+      
+    </form>
+
+  </div>
+  <div class="contenido">
+    <div class="contenido-imagen">
+      <img src="{{img}}" alt="">
+
+    </div>
+    <div class="contenidoTexto">
+      <h3 class="titulo">
+        {{nombre}}
+      </h3>
+      <h4 class="texto">
+        {{texto}}
+      </h4>
+      <div class="fechas">
+        {{desde}}
+        <p>-</p>
+        {{hasta}}
+      </div>
+      <h5 class="lugar">
+        {{lugar}}
+      </h5>
+
+    </div>
+
+  </div>
