--- a/src/app/components/logos/logos.component.html
+++ b/src/app/components/logos/logos.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="container">
+    <div class="container" data-aos="zoom-out-down" data-aos-duration="2500">
         <div class="logo">
             <img src="../../../assets/logos/APLogo-20-20.png" id="logoAP">
             <img src="../../../assets/logos/LogosInti.png" id="logo">
@@ -11,8 +11,8 @@
             <a href=""><img src="../../../assets/logos/twiter.png" id="linkedin"></a>
             
 
-            <button type="button" *ngIf="!isLogged"><a href="/Login">INICIAR </a></button>
-            <button type="button" (click)="onLogOut()" *ngIf="isLogged">CERRAR SESION</button>
+            <button type="button" *ngIf="!isLogged"><a href="/Login"><img src="../../../assets/logos/iniciar-cesion.png" alt=""> </a></button>
+            <button type="button" (click)="onLogOut()" *ngIf="isLogged"><img src="../../../assets/logos/borrar.png" alt=""> </button>
         </div>
     </div>
 </div>
