--- a/src/app/components/logos/logos.component.scss
+++ b/src/app/components/logos/logos.component.scss
@@ -19,6 +19,15 @@
         padding-right: 1em;
         width: 50px;
       }
+      button{
+        padding: 0;
+        margin: 0;
+        background-color: transparent;
+        border-width: 0px;
+        height: auto;
+        width: auto;
+       
+      }
     }
   }
 }
