proyecto faltan retoques

--- a/src/app/components/cursos/cursos.component.scss
+++ b/src/app/components/cursos/cursos.component.scss
@@ -54,6 +54,8 @@
                 flex-direction: row;
                 margin: 0em 0em;
                 max-width: 600px;
+        font-family: 'Roboto', sans-serif;
+
                 .contenido-imagen{
                     display: flex;
                     
