--- a/src/app/components/educacion/educacion.component.scss
+++ b/src/app/components/educacion/educacion.component.scss
@@ -50,6 +50,8 @@
                 }
             }
             .contenido{
+        font-family: 'Roboto', sans-serif;
+
                 display: flex;
                 flex-direction:row-reverse;
                 margin: 0em 0em;
