--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -8,7 +8,7 @@
   <div>
     <table class="table">
       <tbody>
-        <tr class="tabla" *ngFor="let Experiencia of expe">
+        <tr class="tabla" *ngFor="let Experiencia of experiencia">
           <div class="menu">
             <td *ngIf="isLogged">
               <button routerLink="/editexp/{{Experiencia.id}}">
