--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -48,3 +48,28 @@ div:hover.abajo{
     filter:blur(0px);
     transition: 0.5s;
 }
+
+@media screen and (max-width: 700px){
+    .nombre-completo{
+        font-size: 4em;
+        letter-spacing: 10px;   
+    
+    }
+}
+@media screen and (max-width: 580px){
+    .nombre-completo{
+        font-size: 3em;
+        letter-spacing: 10px;    
+    }
+}
+@media screen and (max-width: 450px){
+    .nombre-completo{
+        font-size: 2.5em;
+        letter-spacing: 8px;    
+    }
+}
+@media screen and (max-width: 380px){
+    .nombre-completo{
+        font-size: 2em;
+    }
+}
