--- a/src/app/components/habilidades/habilidades.component.scss
+++ b/src/app/components/habilidades/habilidades.component.scss
@@ -21,11 +21,7 @@
 .color{
   height:10em
 }
-p{
-  transform:translateY(1em);
-  transition: 0.5s;    
 
-}
 .text{
   font-family: 'Roboto', sans-serif;
   font-size: 1.5em;
@@ -84,6 +80,8 @@ span.text{
 transform:translateY(-1em);
 z-index: -1;
 opacity: 0;
+font-family: 'Roboto', sans-serif;
+
 }
 .apilar:hover span{
   transform:translateY(1em);
@@ -95,7 +93,7 @@ opacity: 0;
 .swiper {
   width: 100%;
   padding-top: 50px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 z-index: 1;
   
 }
