--- a/src/app/components/logos/logos.component.html
+++ b/src/app/components/logos/logos.component.html
@@ -5,10 +5,10 @@
             <img src="../../../assets/logos/LogosInti.png" id="logo">
         </div>
         <div class="redes">
-            <a href=""><img src="../../../assets/logos/linkein.png" id="linkedin"></a>
-            <a href=""><img src="../../../assets/logos/github.png" id="linkedin"></a>
-            <a href=""><img src="../../../assets/logos/facebook.png" id="linkedin"></a>
-            <a href=""><img src="../../../assets/logos/twiter.png" id="linkedin"></a>
+            <a href="https://www.linkedin.com/in/paulo-contrera/" target="_blank"><img src="../../../assets/logos/linkein.png" id="linkedin"></a>
+            <a href="https://github.com/PauloContrera" target="_blank"><img src="../../../assets/logos/github.png" id="linkedin"></a>
+            <a href="https://www.facebook.com/paulo.contrera" target="_blank"><img src="../../../assets/logos/facebook.png" id="linkedin"></a>
+            <a href="https://twitter.com/PauloContrera97" target="_blank"><img src="../../../assets/logos/twiter.png" id="linkedin"></a>
             
 
             <button type="button" *ngIf="!isLogged"><a href="/Login"><img src="../../../assets/logos/iniciar-cesion.png" alt=""> </a></button>
