--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,23 @@
 }
 body {
     --color1: rgba(65, 67, 69, 0);
-   --color2: rgba(65, 67, 69, 0);
+   --color2: #41434500;
     background: var(--color1); background: -webkit-linear-gradient(to right, var(--color1), var(--color2)); 
     background: linear-gradient(to right, var(--color1), var(--color2)), url("./assets/placa-vectorizada.svg"); 
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat ;
+}
+
+body::-webkit-scrollbar{
+    background-color: #414345;
+
+    width: 7px;
+    height : 0px;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: #f3f3f3;
+    // border-radius: 5px;
+
+
 }
