--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -6,7 +6,7 @@
     </button>
   </div>
 
-  <div class="principal">
+  <div class="principal" data-aos="fade-down">
     <div class="foto">
       <img src="{{persona.img}}">
     </div>
