--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -19,7 +19,7 @@
                 <img src="../../../assets/logos/borrar.png" alt=""></button>
             </td>
           </div>
-          <div class="contenido">
+          <div class="contenido" data-aos="fade-down">
             <div class="contenido-imagen">
             <img src="{{Experiencia.img}}" alt="">
             </div>
