--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -6,7 +6,7 @@
   </button>
   </div>
   
-  <div class="habilidades">
+  <div class="habilidades" data-aos="fade-up">
     <!-- *Importar en app-modulo.ts el SwiperModule -->
     <swiper [effect]="'coverflow'" [grabCursor]="true" [centeredSlides]="true" [slidesPerView]="'auto'" [loop]="true"
       [coverflowEffect]="{
