--- a/src/app/components/idiomas/idiomas.component.html
+++ b/src/app/components/idiomas/idiomas.component.html
@@ -19,7 +19,7 @@
                     <img src="../../../assets/logos/borrar.png" alt=""></button>
                 </td>
               </div>
-              <div class="circulos">
+              <div class="circulos" data-aos="fade-up">
                 <circle-progress 
                 [percent]="(idiom.valor)" 
                 [radius]="90" [imageSrc]="''" 
