--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -17,7 +17,7 @@
                 <img src="../../../assets/logos/borrar.png" alt=""></button>
             </td>
           </div>
-          <div class="contenido">
+          <div class="contenido" data-aos="fade-up">
 
             
             <img class="contenido-imagen" src="{{Proyecto.img}}" alt="">
