--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -1,34 +1,29 @@
-<!-- <swiper-container class="mySwiper" pagination="true" effect="coverflow" grab-cursor="true" centered-slides="true"
-slides-per-view="auto" coverflow-effect-rotate="50" coverflow-effect-stretch="0" coverflow-effect-depth="100"
-coverflow-effect-modifier="1" coverflow-effect-slide-shadows="true">
-<swiper-slide>
-  <img src=" https://swiperjs.com/demos/images/nature-1.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-</swiper-slide>
-<swiper-slide>
-  <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-</swiper-slide>
-</swiper-container>
-
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
- -->
+<div class="habilidades-totales">
+  <div class="titulo">
+    <h2>Habilidades</h2>
+  </div>
+  <div class="habilidades" data-aos="fade-up">
+    <!-- *Importar en app-modulo.ts el SwiperModule -->
+    <!-- <swiper [effect]="'coverflow'" [grabCursor]="true" [centeredSlides]="true" [slidesPerView]="'auto'" [loop]="true"
+    [coverflowEffect]="{
+      rotate: 20,
+      stretch: 0,
+      depth: 200,
+      modifier: 1,
+      slideShadows: false
+    }"
+    [autoplay]="{
+      delay: 1500,
+      disableOnInteraction: false
+    }" class="mySwiper">
+      <ng-template swiperSlide *ngFor="let habilidad of habilidades">
+        <div class="apilar"><div class="menu">
+        </div>
+          <img src="{{habilidad.img}}" alt="">
+          <span class="text">{{habilidad.nombre}}</span>
+        </div>
+      </ng-template>
+    </swiper>  -->
+  </div>
+  
+</div>
